[package]
name = "rust-persist"
version = "0.1.0"
authors = ["Starman <30315137+Starman3787@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_persist"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
turbosql = "0.10.0"
